--- a/A Fukin Notebook.ipynb
+++ b/A Fukin Notebook.ipynb
@@ -2,13 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
     "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Labwork 1"
    ]
   },
   {
@@ -171,6 +178,247 @@
     "    \n",
     "listing()   "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Labwork 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self, name, sid, dob, course):\n",
+    "        self.name   = name\n",
+    "        self.sid    = sid\n",
+    "        self.dob    = dob\n",
+    "        self.course = course\n",
+    "         \n",
+    "    def add(self, name, sid, dob, course): \n",
+    "        ob = Student(name, sid, dob, course)\n",
+    "        ls.append(ob)\n",
+    "  \n",
+    "    def display(self, ob):\n",
+    "            print(f\"\"\"Name : {ob.name}\\nStudent ID : {ob.sid}\\nDate Of Birth : {ob.dob}\\nNumber of Course assign : {len(ob.course)}\"\"\")\n",
+    "            for _ in range(len(ob.course)):\n",
+    "                print(f\"Marks of {ob.course[_][0]} :\", ob.course[_][1])\n",
+    "            print(\"------------------------------------\")\n",
+    "         \n",
+    "    def search_by_course(self, course_name) -> str : \n",
+    "        \n",
+    "        course_manage = []\n",
+    "        \n",
+    "        for i in range(ls.__len__()):\n",
+    "            if course_name in ls[i].course[0][0]:\n",
+    "                course_manage.append(ls[i].name)\n",
+    "    \n",
+    "        print(f\"Number of student assign {course_name} : \",len(course_manage))\n",
+    "        print(\"Name :\",\", \".join(str(x) for x in course_manage))\n",
+    "  \n",
+    "    def delete(self, name):\n",
+    "        for i in range(ls.__len__()):\n",
+    "            if name in ls[i].name:\n",
+    "                print(f\"Student name: {name} will be kick out\")\n",
+    "                del ls[i]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name : Aiden\n",
+      "Student ID : bi10-124\n",
+      "Date Of Birth : 2001\n",
+      "Number of Course assign : 2\n",
+      "Marks of Advanced Programming  : 17\n",
+      "Marks of French  : 15\n",
+      "------------------------------------\n",
+      "Name : Na\n",
+      "Student ID : bi10-010\n",
+      "Date Of Birth : 2001\n",
+      "Number of Course assign : 2\n",
+      "Marks of Advanced Programming : 16\n",
+      "Marks of Chemistry : 12\n",
+      "------------------------------------\n",
+      "Name : Mr.Killer\n",
+      "Student ID : ????\n",
+      "Date Of Birth : \n",
+      "Number of Course assign : 2\n",
+      "Marks of Kamikaze : 19\n",
+      "Marks of Throwing knife : 18\n",
+      "------------------------------------\n",
+      "Number of student assign Advanced Programming :  2\n",
+      "Name : Aiden, Na\n",
+      "Student name: Mr.Killer will be kick out\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls =[]\n",
+    "\n",
+    "obj = Student('' ,'', '' ,  0)\n",
+    "obj.add('Aiden', 'bi10-124', '2001', (('Advanced Programming ','17'),('French ','15')) )\n",
+    "obj.add('Na', 'bi10-010', '2001', (('Advanced Programming','16'),('Chemistry','12')) )\n",
+    "obj.add('Mr.Killer', '????', '', (('Kamikaze','19'),('Throwing knife','18')) )\n",
+    "\n",
+    "for i in range(len(ls)):\n",
+    "    obj.display(ls[i])\n",
+    "    \n",
+    "obj.search_by_course('Advanced Programming')\n",
+    "\n",
+    "obj.delete('Mr.Killer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Student object at 0x00000182E71E7A00>\n",
+      "<__main__.Student object at 0x00000182E71E75E0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in ls:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls.__len__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Student' object has no attribute 'tup'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-58-bb0aed20e067>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mStudent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m''\u001b[0m \u001b[1;33m,\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m'chem'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'12'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtup\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Student' object has no attribute 'tup'"
+     ]
+    }
+   ],
+   "source": [
+    "obj = Student('' ,'', '', ('chem','12'))\n",
+    "a = obj.tup\n",
+    "a[0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Student at 0x182e5b25580>"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aiden'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = (('Advanced Programming ', '17'), ('French ', '15'))\n",
+    "'Advanced Programming' in a[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'123'"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
