--- a/A Fukin Notebook.ipynb
+++ b/A Fukin Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -239,16 +239,19 @@
       "Name : Aiden\n",
       "Student ID : bi10-124\n",
       "Date Of Birth : 2001\n",
-      "Number of Course assign : 2\n",
-      "Marks of Advanced Programming  : 17\n",
-      "Marks of French  : 15\n",
+      "Number of Course assign : 4\n",
+      "Marks of Advanced Programming  : 17.5\n",
+      "Marks of French  : 15.25\n",
+      "Marks of Singal  : 14.25\n",
+      "Marks of Basic Database : 17.25\n",
       "------------------------------------\n",
       "Name : Na\n",
       "Student ID : bi10-010\n",
       "Date Of Birth : 2001\n",
-      "Number of Course assign : 2\n",
-      "Marks of Advanced Programming : 16\n",
-      "Marks of Chemistry : 12\n",
+      "Number of Course assign : 3\n",
+      "Marks of Advanced Programming : 16.75\n",
+      "Marks of Chemistry : 12.25\n",
+      "Marks of Web Dev : 19\n",
       "------------------------------------\n",
       "Name : Mr.Killer\n",
       "Student ID : ????\n",
@@ -267,8 +270,8 @@
     "ls =[]\n",
     "\n",
     "obj = Student('' ,'', '' ,  0)\n",
-    "obj.add('Aiden', 'bi10-124', '2001', (('Advanced Programming ','17'),('French ','15')) )\n",
-    "obj.add('Na', 'bi10-010', '2001', (('Advanced Programming','16'),('Chemistry','12')) )\n",
+    "obj.add('Aiden', 'bi10-124', '2001', (('Advanced Programming ','17.5'),('French ','15.25'), ('Singal ','14.25'), ('Basic Database','17.25')) )\n",
+    "obj.add('Na', 'bi10-010', '2001', (('Advanced Programming','16.75'),('Chemistry','12.25'), ('Web Dev', '19')) )\n",
     "obj.add('Mr.Killer', '????', '', (('Kamikaze','19'),('Throwing knife','18')) )\n",
     "\n",
     "for i in range(len(ls)):\n",
@@ -277,6 +280,123 @@
     "obj.search_by_course('Advanced Programming')\n",
     "\n",
     "obj.delete('Mr.Killer')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Labwork 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: windows-curses in c:\\programdata\\anaconda3\\lib\\site-packages (2.2.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install windows-curses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Mark_Manager:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    def round_down(self, name) -> int:\n",
+    "        print(\"ROUND-DOWN Marks\")\n",
+    "        for _ in range(ls.__len__()):\n",
+    "            if name == ls[_].name:\n",
+    "                for subject in ls[_].course:\n",
+    "                    print(f\"Mark of {subject[0]} round-down to: { math.floor(float(subject[1])) }\")\n",
+    "     \n",
+    "    def GPA(self, name):\n",
+    "        for _ in range(ls.__len__()):\n",
+    "            if name == ls[_].name:\n",
+    "                \n",
+    "                GPA = numpy.mean([float(i[1]) for i in ls[_].course])\n",
+    "                print(f\"GPA's {name} is : { GPA }\")\n",
+    "            \n",
+    "                return tuple((GPA ,name))\n",
+    "    def sort_by_GPA(self):\n",
+    "        \n",
+    "        GPA_list = [self.GPA(ls[_].name) for _ in range(len(ls)) ]\n",
+    "    \n",
+    "        descending = sorted(GPA_list, key=lambda i: i[1])\n",
+    "                \n",
+    "        for top,value in enumerate(descending):\n",
+    "            print(f\"Ranking {top+1} is {value[0]} with {value[1]} points\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Aiden', 'Na']"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ ls[_].name for _ in range(len(ls)) ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROUND-DOWN Marks\n",
+      "Mark of Advanced Programming  round-down to: 17\n",
+      "Mark of French  round-down to: 15\n",
+      "Mark of Singal  round-down to: 14\n",
+      "Mark of Basic Database round-down to: 17\n",
+      "GPA's Aiden is : 16.0625\n",
+      "GPA's Na is : 16.0\n",
+      "Ranking 1 is 16.0625 with Aiden points\n",
+      "Ranking 2 is 16.0 with Na points\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = Mark_Manager('Aiden',)\n",
+    "t.round_down('Aiden')\n",
+    "# t.GPA('Aiden')\n",
+    "t.sort_by_GPA()"
    ]
   }
  ],
