--- a/A Fukin Notebook.ipynb
+++ b/A Fukin Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,19 +367,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Input_Manage:\n",
-    "    def __init__(self, name, sid, dob, course, students_list=[]):\n",
+    "    \n",
+    "    students_list = []\n",
+    "    \n",
+    "    def __init__(self, name, sid, dob, course):\n",
     "        self.name   = name\n",
     "        self.sid    = sid\n",
     "        self.dob    = dob\n",
     "        self.course = course\n",
-    "        self.students_list = students_list\n",
     "         \n",
-    "    def add(self, name, sid, dob, course ): \n",
+    "    def add(self, name, sid, dob, course ):\n",
+    "        print(\"RUN\")\n",
     "        ob = Input_Manage(name, sid, dob, course)\n",
     "        self.students_list.append(ob)\n",
     "        \n",
@@ -392,13 +395,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj.add('Aiden', 'bi10-124', '2001', (('Advanced Programming ','17.5'),('French ','15.25'), ('Singal ','14.25'), ('Basic Database','17.25')) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Output_Manage:\n",
-    "    def __init__(self, students_list):\n",
-    "        self.students_list = students_list\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "#         self.students_list = students_list\n",
     "    \n",
     "    def display(self,students_list):\n",
     "        for info in students_list:\n",
@@ -410,13 +423,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RUN\n",
+      "RUN\n",
       "Name : Aiden\n",
       "Student ID : bi10-124\n",
       "Date Of Birth : 2001\n",
@@ -449,12 +464,46 @@
     "        obj.add('Aiden', 'bi10-124', '2001', (('Advanced Programming ','17.5'),('French ','15.25'), ('Singal ','14.25'), ('Basic Database','17.25')) )\n",
     "        obj.add('Na', 'bi10-010', '2001', (('Advanced Programming','16.75'),('Chemistry','12.25'), ('Web Dev', '19')) )\n",
     "\n",
-    "        display = Output_Manage(None)\n",
+    "        display = Output_Manage()\n",
     "        display.display(obj.students_list)\n",
-    "\n",
     "if __name__ == \"__main__\":\n",
     "    main = MainClass() \n",
     "    main.ex4()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUN\n",
+      "RUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Input_Manage at 0x72db028>,\n",
+       " <__main__.Input_Manage at 0x72db0d0>,\n",
+       " <__main__.Input_Manage at 0x7210e68>,\n",
+       " <__main__.Input_Manage at 0x7210c58>]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj = Input_Manage('' ,'', '' ,  0)\n",
+    "obj.add('Aiden', 'bi10-124', '2001', (('Advanced Programming ','17.5'),('French ','15.25'), ('Singal ','14.25'), ('Basic Database','17.25')) )\n",
+    "obj.add('Na', 'bi10-010', '2001', (('Advanced Programming','16.75'),('Chemistry','12.25'), ('Web Dev', '19')) )\n",
+    "\n",
+    "obj.students_list"
    ]
   },
   {
@@ -462,6 +511,75 @@
    "metadata": {},
    "source": [
     "# Labwork 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Aiden', 'Na', 'Aiden', 'Na']"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[obj.students_list[i].name for i in range(len(obj.students_list)) ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Aiden'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.students_list[0].name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class domains:\n",
+    "    def __init__(self):\n",
+    "        # self.filename = filename\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "    def ex5(self,):\n",
+    "\n",
+    "        obj = Input_Manage('' ,'', '' ,  0)\n",
+    "        obj.add('Aiden', 'bi10-124', '2001', (('Advanced Programming ','17.5'),('French ','15.25'), ('Singal ','14.25'), ('Basic Database','17.25')) )\n",
+    "        obj.add('Na', 'bi10-010', '2001', (('Advanced Programming','16.75'),('Chemistry','12.25'), ('Web Dev', '19')) )\n",
+    "\n",
+    "        display = Output_Manage(None)\n",
+    "        display.display(obj.students_list)\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "    def export_file(self , filename, input_ls)\n",
+    "        with open(self.filename,'w+') as f:\n",
+    "            for content in self.input_ls:\n",
+    "                f.write(content+'\\n')"
    ]
   }
  ],
