--- a/A Fukin Notebook.ipynb
+++ b/A Fukin Notebook.ipynb
@@ -367,22 +367,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Input_Manage:\n",
-    "    \n",
-    "    students_list = []\n",
     "    \n",
     "    def __init__(self, name, sid, dob, course):\n",
     "        self.name   = name\n",
     "        self.sid    = sid\n",
     "        self.dob    = dob\n",
     "        self.course = course\n",
-    "         \n",
+    "        self.students_list = []\n",
+    "    \n",
     "    def add(self, name, sid, dob, course ):\n",
-    "        print(\"RUN\")\n",
     "        ob = Input_Manage(name, sid, dob, course)\n",
     "        self.students_list.append(ob)\n",
     "        \n",
@@ -395,16 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obj.add('Aiden', 'bi10-124', '2001', (('Advanced Programming ','17.5'),('French ','15.25'), ('Singal ','14.25'), ('Basic Database','17.25')) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -472,41 +461,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RUN\n",
-      "RUN\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[<__main__.Input_Manage at 0x72db028>,\n",
-       " <__main__.Input_Manage at 0x72db0d0>,\n",
-       " <__main__.Input_Manage at 0x7210e68>,\n",
-       " <__main__.Input_Manage at 0x7210c58>]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "obj = Input_Manage('' ,'', '' ,  0)\n",
-    "obj.add('Aiden', 'bi10-124', '2001', (('Advanced Programming ','17.5'),('French ','15.25'), ('Singal ','14.25'), ('Basic Database','17.25')) )\n",
-    "obj.add('Na', 'bi10-010', '2001', (('Advanced Programming','16.75'),('Chemistry','12.25'), ('Web Dev', '19')) )\n",
-    "\n",
-    "obj.students_list"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -515,47 +469,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Aiden', 'Na', 'Aiden', 'Na']"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "[obj.students_list[i].name for i in range(len(obj.students_list)) ]"
+    "import zipfile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Aiden'"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "obj.students_list[0].name"
+    "class Input_Manage:\n",
+    "    \n",
+    "    def __init__(self, name, sid, dob, course):\n",
+    "        self.name   = name\n",
+    "        self.sid    = sid\n",
+    "        self.dob    = dob\n",
+    "        self.course = course\n",
+    "        self.students_list = []\n",
+    "    \n",
+    "    def add(self, name, sid, dob, course ):\n",
+    "        ob = Input_Manage(name, sid, dob, course)\n",
+    "        self.students_list.append(ob)\n",
+    "        \n",
+    "    def file_compress(self, inp_file_names, output_name):\n",
+    "\n",
+    "        compression = zipfile.ZIP_DEFLATED\n",
+    "\n",
+    "        print(f' *** out_zip_file is - {output_name}')\n",
+    "        zf = zipfile.ZipFile(output_name, mode=\"w\")\n",
+    "\n",
+    "        try:\n",
+    "            for file_to_write in inp_file_names:\n",
+    "                print(f' *** Processing file {file_to_write}')\n",
+    "                zf.write(file_to_write, file_to_write, compress_type=compression)\n",
+    "\n",
+    "        except FileNotFoundError as e:\n",
+    "            print(f' *** Exception occurred during zip process - {e}')\n",
+    "\n",
+    "        zf.close()\n",
+    "        \n",
+    "    def compress(self):\n",
+    "        list_files = ['students.txt','courses.txt','marks.txt']\n",
+    "        \n",
+    "        self.file_compress(list_files, 'students.dat')\n",
+    "        \n",
+    "    def decompress(self):\n",
+    "        try:\n",
+    "            with zipfile.ZipFile(\"students.dat\",\"r\") as zip_ref:\n",
+    "                zip_ref.extractall(\"decompress\")\n",
+    "        except Exeption as E:\n",
+    "            print('FILE students.dat not found')\n",
+    "            print('ERROR :',E)\n",
+    "        \n",
+    "        \n",
+    "    def export(self,infos):\n",
+    "        for content in infos:\n",
+    "            with open('students.txt','a+') as f:\n",
+    "                f.write('Name :'+content.name+'\\n')\n",
+    "                f.write('  Student-ID: '+content.sid+'\\n')\n",
+    "                f.write('  Date Of Birth'+content.dob+'\\n')\n",
+    "                \n",
+    "            with open('courses.txt','a+') as f1:\n",
+    "                f1.write('Name :'+content.name+'\\n')\n",
+    "                for _ in content.course:\n",
+    "                    f1.write('  Course:'+_[0]+'\\n')\n",
+    "                \n",
+    "            with open('marks.txt','a+') as f2:\n",
+    "                f2.write('Name :'+content.name+'\\n')\n",
+    "                for _ in content.course:\n",
+    "                    f2.write(f'  {_[0]}:'+_[1]+'\\n')\n",
+    "                    \n",
+    "    def running(self):\n",
+    "        self.compress\n",
+    "        self.decompress"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,15 +566,12 @@
     "        obj.add('Aiden', 'bi10-124', '2001', (('Advanced Programming ','17.5'),('French ','15.25'), ('Singal ','14.25'), ('Basic Database','17.25')) )\n",
     "        obj.add('Na', 'bi10-010', '2001', (('Advanced Programming','16.75'),('Chemistry','12.25'), ('Web Dev', '19')) )\n",
     "\n",
-    "        display = Output_Manage(None)\n",
-    "        display.display(obj.students_list)\n",
-    "        \n",
-    "        \n",
+    "        obj.export(obj.students_list)\n",
+    "        obj.running()\n",
     "\n",
-    "    def export_file(self , filename, input_ls)\n",
-    "        with open(self.filename,'w+') as f:\n",
-    "            for content in self.input_ls:\n",
-    "                f.write(content+'\\n')"
+    "if __name__ == \"__main__\":\n",
+    "    main = MainClass() \n",
+    "    main.ex5()        "
    ]
   }
  ],
