--- a/A Fukin Notebook.ipynb
+++ b/A Fukin Notebook.ipynb
@@ -573,6 +573,42 @@
     "    main = MainClass() \n",
     "    main.ex5()        "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Labwork 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(dogs_dict,outfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_files = ['students.txt','courses.txt','marks.txt']\n",
+    "with open('students.pkl', \"wb\") as fileobj:\n",
+    "    pickle.dump(list_files, fileobj)"
+   ]
   }
  ],
  "metadata": {
